# OpenAPI2Streamlit

./: .gitignore  Makefile  pyproject.toml  setup.py
openapi2streamlit/: main.py
openapi2streamlit/generator/: streamlit_api_generator.py  streamlit_baseapp_generator.py  utils.py
openapi2streamlit/generator/streamlit/: api.py  base_app.py  form.py  streamlit_generator.py  utils.py
openapi2streamlit/openapi_parser/: extractor.py  loader.py
openapi2streamlit/templates/: streamlit_api_component.jinja  streamlit_component.jinja  streamlit_env_file.jinja  streamlit_runapp_component.jinja
openapi2streamlit/templates/streamlit/api/: api_call.jinja
openapi2streamlit/templates/streamlit/components/: form.jinja
tests/: test.py
