[tool.poetry]
name = "openapi2streamlit"
version = "0.1.0"
description = ""
authors = ["Alexandre Meline. <alexandre.meline.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.6"
streamlit = "^1.43.1"
requests = "^2.32.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
openapi2streamlit = "openapi2streamlit.main:main"
